--- a/projects/1/css/bootstrap.css
+++ b/projects/1/css/bootstrap.css
@@ -84,6 +84,8 @@ sub {
   bottom: -.25em;
 }
 img {
+  width: 40%;
+  height: 40%;
   border: 0;
 }
 svg:not(:root) {
@@ -1122,7 +1124,7 @@ img {
 .carousel-inner > .item > a > img {
   display: block;
   max-width: 100%;
-  height: auto;
+  max-height: 600px;
 }
 .img-rounded {
   border-radius: 6px;
